re PR fortran/11301 (ICE with -fno-globals)

2003-07-05  Toon Moene  <toon@moene.indiv.nluug.nl>

	PR Fortran/11301
	* com.c (ffecom_sym_transform_): Only install
	FFEINFO_whereGLOBAL symbols in the global binding
	level if not -fno-globals.

From-SVN: r68972